# DBTicker

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: dbticker.modelfile  messagecodes.toml  mystations.toml  routes.toml  routes.toml.bak.20260506_074826  routes.toml.bak.20260506_075649
dbticker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
integrations/openclaw/: README.md  dbticker.service  dbticker.sh  dbticker.sh.bak  dbticker.timer
src/: __init__.py  agent_prompt.py  checker.py  config_defaults.py  db_client.py  logging_setup.py  logging_setup.py.bak  main.py  main.py.bak  messagecodes.py  notifier.py  notifier.py.bak  state.py  state.py.bak
src/cli/: __init__.py
tools/: find_station.py  test_checker.py  test_client.py  test_push.py  test_state.py  test_trip_event.py
